--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,9 @@
 	background-color: #e72510;
 	border: 1px solid #a91b0c;
 }
+
+#clock {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 35px;
+}
