--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,12 @@
   padding-bottom: 10px;
   margin-top: 10px;
   margin-bottom: 30px;
-  color: inherit;
-  background-color: #f4f4f4;
+  color: white;
+  background-color: #222222;
 }
 .jumbotron h1,
 .jumbotron .h1 {
-  color: inherit;
+  color: white;
   text-align: center;
 }
 
@@ -30,14 +30,18 @@
   max-width: 100%;
 }
 
+.panel-default {
+
+}
 #add-train-btn {
 	color: white;
 	background-color: #e72510;
 	border: 1px solid #a91b0c;
 }
 
+/*
 #clock {
   text-align: center;
   margin-bottom: 20px;
   font-size: 35px;
-}
+}*/
